# lambdapure

./: CMakeLists.txt  Readme.md
include/: CMakeLists.txt
include/lambdapure/: AST.h  Dialect.h  Lexer.h  MLIRGen.h  Ops.td  Parser.h  Passes.h  Scope.h  TranslateToCpp.h  VarTable.h
lib/: CMakeLists.txt
lib/mlir/: AST.cpp  CMakeLists.txt  DestructiveUpdates.cpp  Dialect.cpp  LambdapureToLeanLowering.cpp  MLIRGen.cpp  ReferenceRewritePattern.cpp  TranslateToCpp.cpp
tests/bench/: Readme.md  a.out  binarytrees.lean  const_fold.lean  const_folding.lean  deriv.lambdapure  deriv.lean  list.lambdapure  list.lean  listdestructive.cpp  listnaive.cpp  out.cpp  treemap.lean  unionfind.lean
tests/playground/: a.out  closure.lambdapure  closure.lean  store.lambdapure  test.lambdapure  tree.lambdapure  tree.lean  treeupdate.lean
tests/simple/: a.out  case.lambdapure  case.lean  const.out  ctor.lean  higherorder.lean  main.lambdapure  main.lean
tools/lambdapure/: CMakeLists.txt  lambdapure.cpp
workspace/: .show  demo.lambdapure  demo.lean  demo.show  more.lambdapure  more.lean  run.sh  showpure.sh
